# OpenglLiveView

./: .gitignore  README.md  build-profile.json5  log.txt
AppScope/: app.json5
AppScope/resources/base/element/: string.json
egl/: Index.ets  NAPI使用规则.md  NAPI技术解析与意义总结.md  build-profile.json5
egl/src/main/: module.json5
egl/src/main/assets/shaders/: quadfrag.glsl  quadvert.glsl
egl/src/main/cpp/: CMakeLists.txt  global.cpp  global.h  napi_init.cpp
egl/src/main/cpp/example/: BaseExample.cpp  BaseExample.h  BaseRenderer.cpp  BaseRenderer.h  CloudSceneRenderer.cpp  CloudSceneRenderer.h  EBORectangleExample.cpp  EBORectangleExample.h  FullRainSceneRenderer.cpp  FullRainSceneRenderer.h  FullSceneRenderer.cpp  FullSceneRenderer.h  FullSnowSceneRenderer.cpp  FullSnowSceneRenderer.h  ImageExample.cpp  ImageExample.h  LightningSequencePlayer.cpp  LightningSequencePlayer.h  NightSceneSequencePlayer.cpp  NightSceneSequencePlayer.h  RainSceneRenderer.cpp  RainSceneRenderer.h  RainWithBackgroundSeqPlayer.cpp  RainWithBackgroundSeqPlayer.h  SceneSequencePlayer.cpp  SceneSequencePlayer.h  SeqPlayerExample.cpp  SeqPlayerExample.h  SeqPlayerRenderer.cpp  SeqPlayerRenderer.h  SinglePlayerExample.cpp  SinglePlayerExample.h  SinglePlayerRenderer.cpp  SinglePlayerRenderer.h  SnowSceneRenderer.cpp  SnowSceneRenderer.h  ThickCloudSequencePlayer.cpp  ThickCloudSequencePlayer.h  TriangleExample.cpp  TriangleExample.h  (+4 more)
egl/src/main/cpp/include/: EglCore.h  EglRender.h
egl/src/main/cpp/render/: EglCore.cpp  EglCore.h  EglRender.cpp  EglRender.h  NativeRenderer.cpp  NativeRenderer.h
egl/src/main/cpp/types/libegl/: index.d.ts
egl/src/main/cpp/util/: ASTCUtils.cpp  ASTCUtils.h  AppContext.cpp  AppContext.h  AstcUtils.cpp  AstcUtils.h  AsycSequenceFramePlayer.cpp  AsycSequenceFramePlayer.h  Common.h  FileUtils.cpp  FileUtils.h  GLUtil.cpp  GLUtil.h  ImageUtils.cpp  ImageUtils.h  JsonReader.cpp  JsonReader.h  LuminCalculator.cpp  LuminCalculator.h  OpenGLCommon.h  RaindropColorAdaptor.cpp  RaindropColorAdaptor.h  ScreenQuad.cpp  ScreenQuad.h  SequenceFramePlayer.cpp  SequenceFramePlayer.h  ShaderProgram.cpp  ShaderProgram.h  SingleTexturePlayer.cpp  SingleTexturePlayer.h  Texture2D.cpp  Texture2D.h  TimeUtils.cpp  app_util.cpp  app_util.h  log.h  napi_util.h
egl/src/main/ets/components/: Contants.ets  GLComponent.ets  WeatherComponent.ets
egl/src/main/resources/rawfile/: fragment.glsl  snowScene.astc  vertex.glsl  watercolor.astc
egl/src/main/resources/rawfile/configs/: FullRainSceneConfig.json  FullSceneConfig.json  FullSnowSceneConfig.json  RainMultiChannelSeqConfig.json  SnowSceneConfig.json  SnowSeqConfig.json
egl/src/main/resources/rawfile/shaders/: lightning.frag  lightning.vert  multiChannelRainSeq.vert  multiChannelRainSeq8bit.frag  multiChannelRainSeq8bitRainWithBackground.frag  multiChannelRainSeq8bitRaindrop.frag  multiChannelRainSeqLerp8bitFilteringLightCloud.frag  multiChannelRianSeq8bitRainWithBackground.frag  multiChannelRianSeq8bitRaindrop.frag  multiChannelRianSeqLerp8bitFilteringLightCloud.frag  multiChannelRianSeqLerp8bitLightCloud.frag  multiChannelSnowSeq8bit.frag  sequenceTexturePlayerASTC.frag  sequenceTexturePlayerRainCloudASTC.frag  singleTexturePlayer.vert  singleTexturePlayerASTC.frag  thickCloud.frag  thickCloud.vert
egl/src/main/resources/rawfile/textures/: NightSceneWithLightMask.astc  background.astc  background_dusk.astc  background_dusk_transparent.astc  background_sky.astc  background_sky_transparent.astc
egl/src/main/resources/rawfile/textures/bigRainDroppre_mergedpng_ASTC12x12_Linear/: frame_005.astc  frame_007.astc  frame_012.astc  frame_017.astc  frame_020.astc  frame_021.astc  frame_023.astc  frame_024.astc  frame_026.astc  frame_027.astc  frame_029.astc
egl/src/main/resources/rawfile/textures/cloud_ASTC12x12_Linear/: frame_001.astc  frame_002.astc  frame_005.astc  frame_008.astc  frame_009.astc  frame_010.astc  frame_011.astc  frame_012.astc  frame_014.astc  frame_016.astc  frame_018.astc  frame_019.astc  frame_020.astc  frame_028.astc  frame_032.astc  frame_034.astc
egl/src/main/resources/rawfile/textures/lightning_ASTC12x12_Linear/: frame_001.astc  frame_002.astc  frame_003.astc  frame_005.astc  frame_006.astc  frame_007.astc  frame_008.astc  frame_012.astc  frame_013.astc  frame_014.astc
egl/src/main/resources/rawfile/textures/rainScene/bigRainDroppre_mergedpng_ASTC12x12_Linear/: frame_001.astc  frame_002.astc  frame_003.astc  frame_004.astc  frame_006.astc  frame_008.astc  frame_009.astc  (+13 more)
egl/src/main/resources/rawfile/textures/rain_splash_4channel_ASTC12x12_Linear/: frame_002.astc  frame_003.astc  frame_004.astc  frame_005.astc  frame_009.astc  frame_011.astc  frame_014.astc  frame_015.astc  frame_018.astc  frame_021.astc  frame_022.astc  frame_025.astc  frame_026.astc  frame_027.astc  frame_028.astc  frame_029.astc  frame_030.astc  frame_033.astc  frame_034.astc  frame_035.astc  frame_042.astc  frame_043.astc  frame_044.astc  frame_045.astc  frame_046.astc  frame_052.astc  frame_053.astc  frame_055.astc  frame_062.astc  frame_066.astc  frame_067.astc  frame_068.astc  frame_069.astc  frame_075.astc  frame_077.astc  frame_078.astc  frame_080.astc  frame_081.astc  frame_082.astc  frame_083.astc  (+28 more)
egl/src/main/resources/rawfile/textures/small_rainDrop_mergedpng_ASTC12x12_Linear/: frame_001.astc  frame_002.astc  frame_008.astc  frame_009.astc  frame_010.astc  frame_012.astc  frame_013.astc  frame_014.astc  frame_023.astc  frame_024.astc
egl/src/ohosTest/: module.json5
egl/src/ohosTest/ets/test/: Ability.test.ets  List.test.ets  Mock.test.ets
entry/: oh-package.json5
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
liveViewSim/: oh-package-lock.json5  oh-package.json5
liveViewSim/src/main/: module.json5
liveViewSim/src/main/ets/liveviewsimability/: LiveViewSimAbility.ets
liveViewSim/src/main/ets/pages/: Index.ets  InteractiveComponent.ets  LiveViewComponent.ets  LiveViewModel.ets
liveViewSim/src/main/resources/base/element/: string.json
liveViewSim/src/ohosTest/: module.json5
(+880 files in other folders)
